21 June 2020
	- Updated the HpHost location
	- Adding .dtq zones
	- Updated the code for blocklist.site to use array

15. January 2020
    - Replaces MobileAdTracker with adaway.github.io
